Better use of spacing, fix svg in app, update image

--- a/interactive-flyer/src/css/main.scss
+++ b/interactive-flyer/src/css/main.scss
@@ -85,6 +85,7 @@ $gs-baseline: 12px;
 }
 
 .email-signup {
+    padding-top: $gs-baseline * 2;
     background-color: $features-support-1;
     min-width: 16em;
 }
@@ -137,10 +138,15 @@ $gs-baseline: 12px;
         }
     }
 
+    .inline-clock {
+        fill: #ffffff;
+    }
+
     .email-signup__aside-text {
         @include fs-textSans(2);
         color: $features-support-3;
         width: 65%;
+        padding-top: $gs-baseline;
         margin-left: 2%;
 
         @include mq($until: tablet) {
